# qotd-telegram-bot

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt
.github/workflows/: ci.yml  send.yml
api/: Dockerfile  pyproject.toml
api/app/: __init__.py  config.py  main.py
api/app/services/: __init__.py  places.py
api/tests/: test_health.py  test_places_client.py
bot/: main.py
docs/: ci-badge-snippet.md  overview.md
infra/: docker-compose.yml
miniapp/: eslint.config.js  package.json  tsconfig.base.json  tsconfig.json  vite.config.ts
miniapp/src/: main.tsx  styles.css
miniapp/src/ui/: App.tsx  PlaceCard.tsx  SwipeActions.tsx
