[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "go-out-today-api"
version = "0.1.0"
description = "FastAPI proxy for places (2GIS/Google) with swipe/match logic."
readme = "../README.md"
requires-python = ">=3.11"
license = { file = "../LICENSE" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.2",
    "redis>=5.0.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "black>=24.10.0",
    "mypy>=1.12.0",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "W", "B", "I", "UP", "N", "ASYNC", "PL"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
